Fixed field border overlapping with legend box.

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -303,6 +303,7 @@ table {
 }
 
 ol.fields {
+    padding-top:10px;
     li:hover {
         border: 1px solid @grayLighter;
     }
